--- a/src/test/resources/testng_suites/web.xml
+++ b/src/test/resources/testng_suites/web.xml
@@ -16,7 +16,7 @@
 
 	<test name="GSM arena web tests">
 		<classes>
-			<class name="com.qaprosoft.carina.demo.WebSampleTest" />
+			<class name="testingYago.WebSampleTest" />
 		</classes>
 	</test>
 
